--- a/heritrix/Dockerfile
+++ b/heritrix/Dockerfile
@@ -9,6 +9,9 @@ RUN \
 
 RUN wget -O heritrix.zip https://sbforge.org/nexus/service/local/repositories/snapshots/content/org/archive/heritrix/heritrix/3.3.0-BDB-5.0.x-NAS-1.0-SNAPSHOT/heritrix-3.3.0-BDB-5.0.x-NAS-1.0-20180628.090816-4-dist.zip
 RUN unzip heritrix.zip
+RUN mkdir heritrix-3.3.0-BDB-5.0.x-NAS-1.0-SNAPSHOT/jobs/umbrajob
+RUN ln -s heritrix-3.3.0-BDB-5.0.x-NAS-1.0-SNAPSHOT heritrix
+ADD cxml.cxml  heritrix/jobs/umbrajob/cxml.cxml
 
 EXPOSE 8443
 
@@ -16,5 +19,5 @@ ENV FOREGROUND true
 
 ENV JAVA_OPTS -Xmx2g
 
-CMD heritrix-3.3.0-BDB-5.0.x-NAS-1.0-SNAPSHOT/bin/heritrix -b 0.0.0.0 -a admin:admin
+CMD heritrix/bin/heritrix -b 0.0.0.0 -a admin:admin
 
