Added a non-umbra crawl-definition for comparison.

--- a/heritrix/Dockerfile
+++ b/heritrix/Dockerfile
@@ -9,9 +9,14 @@ RUN \
 
 RUN wget -O heritrix.zip https://sbforge.org/nexus/service/local/repositories/snapshots/content/org/archive/heritrix/heritrix/3.3.0-BDB-5.0.x-NAS-1.0-SNAPSHOT/heritrix-3.3.0-BDB-5.0.x-NAS-1.0-20180628.090816-4-dist.zip
 RUN unzip heritrix.zip
-RUN mkdir heritrix-3.3.0-BDB-5.0.x-NAS-1.0-SNAPSHOT/jobs/umbrajob
 RUN ln -s heritrix-3.3.0-BDB-5.0.x-NAS-1.0-SNAPSHOT heritrix
-ADD cxml.cxml  heritrix/jobs/umbrajob/cxml.cxml
+
+RUN mkdir heritrix/jobs/umbrajob
+RUN mkdir heritrix/jobs/nonumbrajob
+
+ADD umbra.cxml  heritrix/jobs/umbrajob/umbra.cxml
+ADD nonumbra.cxml  heritrix/jobs/umbrajob/nonumbra.cxml
+
 
 EXPOSE 8443
 
