Changed to true headless browsing.

--- a/umbra/Dockerfile
+++ b/umbra/Dockerfile
@@ -5,7 +5,6 @@ RUN apt-get update && apt-get install -y \
     git \
     python3 \
     python3-pip \
-    xvfb \
     chromium \
     wget \
     tar
@@ -23,10 +22,10 @@ RUN cd publicsuffix-master && python3 setup.py install
 # This script (ruthlessly stolen from https://github.com/mark-adams/docker-chromium-xvfb) replaces the chrome and
 # chromium startup scripts and ensures that whichever you call, chromium is started in a headless Xvfb display
 #
-ADD xvfb-chromium /usr/bin/xvfb-chromium
+ADD run-chromium /usr/bin/run-chromium
 ADD wait-for-it.sh wait-for-it.sh
 ADD start.sh start.sh
-RUN chmod 755 /usr/bin/xvfb-chromium  ./wait-for-it.sh ./start.sh
+RUN chmod 755 /usr/bin/run-chromium  ./wait-for-it.sh ./start.sh
 
 
 RUN pip3 install git+https://github.com/internetarchive/umbra.git
